--- a/public/stylesheets/navbar.less
+++ b/public/stylesheets/navbar.less
@@ -55,7 +55,10 @@
     > .container-fluid {
         border-radius: 2px; 
     }
-
+    h3 {
+        border-top: none;
+        border-bottom: 1px solid rgb(244, 244, 244)
+    }
 }
 
 #logoAnchor {
